--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,15 +4,7 @@ html, body
   color: #2e2f30;
   letter-spacing: 0.5px;
   font-family: "Source Sans Pro", Arial, sans-serif;
-  height: 100vh;
   margin: 0;
-}
-
-footer
-{
-  padding: 20px;
-  text-align: center;
-  border-top: 1px solid #ddd;
 }
 
 *, *:after, *:before{
@@ -26,6 +18,9 @@ a, a:hover, a:focus, a:visited
 
 h1, h2, h3, h4, h5, h6{
   margin: 0 0 0.5em 0;
+}
+p{
+  margin: 0;
 }
 .container
 {
