--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,7 +13,8 @@ html, body
 
 a, a:hover, a:focus, a:visited
 {
-  color: #41B883;
+  color: #715d60;
+  text-decoration: none;
 }
 
 h1, h2, h3, h4, h5, h6{
